Modification to support reactive data layer. Blocking any reactive call until refactor of service layer.